# zephyr-infineon

./: .gitignore  README.md
boards/arm/xmc48_relax_kit/: Kconfig.board  Kconfig.defconfig  board.cmake  xmc48_relax_kit-pinctrl.dtsi  xmc48_relax_kit.dts  xmc48_relax_kit.yaml  xmc48_relax_kit_defconfig
manifest/: west.yml
samples/xmc48_relax/: CMakeLists.txt  prj.conf
samples/xmc48_relax/src/: main.c
